Fix sub menu navigation on mobile

--- a/src/parts/navigation.less
+++ b/src/parts/navigation.less
@@ -135,6 +135,7 @@
             width: 250px;
             text-align: left;
             padding: @sub-menu-offset 0;
+            z-index: 1;
 
             li {
               background: @nav-link-color-hover-bg;
@@ -252,6 +253,10 @@
 
             ul.sub-menu {
               display: none;
+              position: static;
+              padding: 0 0 .25rem 10px;
+              width: 100%;
+              margin-bottom: .25rem;
             }
 
             &:hover {
@@ -259,6 +264,10 @@
 
               ul.sub-menu {
                 display: block;
+
+                a {
+                  padding: 0.5em 15px;
+                }
               }
             }
 
